objects/AcctSeed__Tax_Settings__c/fields/AcctSeed__AvaTax_License__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__AvaTax_License__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>AvaTax only: The AvaTax License that will be associated with the ledger</inlineHelpText>
    <label>AvaTax License</label>
    <referenceTo>AcctSeed__AvaTax_License__c</referenceTo>
    <relationshipLabel>Tax Settings</relationshipLabel>
    <relationshipName>Tax_Settings</relationshipName>
    <type>Lookup</type>
</CustomField>