objects/AcctSeed__Tax_Settings__c/fields/AcctSeed__Sales_Tax_Calculation_Mode__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Sales_Tax_Calculation_Mode__c</fullName>
    <inlineHelpText>Shipment uses AvaTax to determine the proper sourcing for tax calculations. Point of Sale forces tax calculation to be based on the Origin Address. Point of Destination forces tax calculation to be based on the Billing&apos;s Shipping address.</inlineHelpText>
    <label>Sales Tax Calculation Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Shipment</fullName>
                <default>true</default>
                <label>Shipment</label>
            </value>
            <value>
                <fullName>Point of Sale</fullName>
            </value>
            <value>
                <fullName>Point of Destination</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>