objects/AcctSeed__Tax_Settings__c/fields/AcctSeed__Sales_Tax_Product__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Sales_Tax_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>AvaTax for Line Level Posting orgs only: A generic Product whose name (example: AvaTax Tax) populates the Product field on the calculated AvaTax tax line. This should be assigned a $0.00 standard price and added to a price book.</inlineHelpText>
    <label>Sales Tax Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Tax Settings</relationshipLabel>
    <relationshipName>Tax_Settings</relationshipName>
    <type>Lookup</type>
</CustomField>