objects/AcctSeed__Tax_Settings__c/fields/AcctSeed__Tax_Rounding_Threshold__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Tax_Rounding_Threshold__c</fullName>
    <inlineHelpText>Small discrepancies caused by rounding tax calculations will be adjusted up to this threshold amount. This applies only to the AS Native Tax users with the Header Level Posting setting.</inlineHelpText>
    <label>Tax Rounding Threshold</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0.00</fullName>
                <default>true</default>
                <label>0.00</label>
            </value>
            <value>
                <fullName>0.01</fullName>
            </value>
            <value>
                <fullName>0.02</fullName>
            </value>
            <value>
                <fullName>0.03</fullName>
            </value>
            <value>
                <fullName>0.04</fullName>
            </value>
            <value>
                <fullName>0.05</fullName>
            </value>
            <value>
                <fullName>0.06</fullName>
            </value>
            <value>
                <fullName>0.07</fullName>
            </value>
            <value>
                <fullName>0.08</fullName>
            </value>
            <value>
                <fullName>0.09</fullName>
            </value>
            <value>
                <fullName>0.10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>