objects/AcctSeed__Tax_Settings__c/fields/AcctSeed__Tax_Settings_Method__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Tax_Settings_Method__c</fullName>
    <inlineHelpText>Tax Calculation Options</inlineHelpText>
    <label>Tax Settings Method</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AcctSeed__Tax_Settings_Method</valueSetName>
    </valueSet>
</CustomField>