objects/AcctSeed__Tax_Settings__c/listViews/AcctSeed__All.listView-meta.xml
<ListView>
    <fullName>AcctSeed__All</fullName>
    <columns>NAME</columns>
    <columns>AcctSeed__Tax_Settings_Method__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>