objects/AcctSeed__Tax_Settings__c/listViews/AcctSeed__NativeSalesTax.listView-meta.xml
<ListView>
    <fullName>AcctSeed__NativeSalesTax</fullName>
    <columns>NAME</columns>
    <columns>AcctSeed__Tax_Settings_Method__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AcctSeed__Tax_Settings_Method__c</field>
        <operation>equals</operation>
        <value>Accounting Seed Native Tax</value>
    </filters>
    <label>Accounting Seed Native Tax</label>
</ListView>